--- a/app/views/messages/splash.html.erb
+++ b/app/views/messages/splash.html.erb
@@ -1,7 +1,7 @@
 <!-- This is the splash screen -->
 <div class="maincontainer">
   <div>
-    <p>This is the splash screen for the helpingchat website</p>
+    <h1 class = "Logotext">This is the splash screen for the helpingchat website</h1>
 
   </div>
 </div>
