Setting up for checker program

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -118,7 +118,7 @@
              <a data-toggle="modal" class="model-splash-link" data-target="#changeissue">Change Issue</a>
           </div>
           <div class="modal-splash-button">
-             <a data-toggle="modal" class="model-splash-link" data-target="#aboutmodel">Start Chatting</a>
+             <a onclick="jsfunction()" class="model-splash-link" href="javascript:void(0);"> Start Chatting</a>
           </div>
         </div>
       </div>
@@ -339,6 +339,10 @@
     $('#namechangedtext').text("Your name has been changed to: " + username);
     $('#namechanged').modal('show');
     $('#changename').modal('hide');
+  }
+  function startchattesty
+  {
+
   }
   function issuechangedfunction()
   {
