Getting ready to remove private pub

--- a/app/views/messages/new_message.js.erb
+++ b/app/views/messages/new_message.js.erb
@@ -1,5 +1,5 @@
 // Clear message input
 $('#message').val('');
-
+alert("Message been sent to <%= @channel %>")
 // Send the message
 <% publish_to @channel, @message %>
