--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -2,6 +2,9 @@
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <%= javascript_include_tag "http://localhost:9292/faye.js" %>
 <%= javascript_include_tag "messages" %>
+<div id="Privatepub">
+
+</div>
 <!-- Nav bar -->
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container">
