Making it work on mobile

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,5 +1,6 @@
 <%= subscribe_to @roomaddress %>
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <%= javascript_include_tag "http://localhost:9292/faye.js" %>
 <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
 <script>
