--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -7,6 +7,10 @@
 	max-width: 400px;
 	text-align: center;
 }
+.model
+    {
+        position: relative;
+    }
 .modal-header
 {
     background-color: #FFAE19;
@@ -142,7 +146,6 @@ body
 #page-content-wrapper {
     width: 100%;
     position: absolute;
-    padding: 15px;
 }
 
 #wrapper.toggled #page-content-wrapper {
